Overlay button tweaks * Fixes vertical centering of icons * Fixes alignment with leaflet +/- buttons * Removes Emoji icons for FontAwesome icons (Fits better) * Makes the shadow more subtle

--- a/client/src/sass/_global.scss
+++ b/client/src/sass/_global.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 62.5%;
 }
 
