--- a/client/src/sass/components/_button.scss
+++ b/client/src/sass/components/_button.scss
@@ -15,6 +15,9 @@ $btn-info-vars: (
   border: 0;
   border-radius: map-get($map: $btn-vars, $key: radius);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 1.6rem;
   padding: 1rem;
   min-height: 50px;
